@@ -1054,6 +1054,12 @@ class LMS
         return $manager->GetCustomerAssignments($id, $show_expired, $show_approved);
     }
 
+    public function GetCustomerServiceSummary($id)
+    {
+        $manager = $this->getFinanceManager();
+        return $manager->GetCustomerServiceSummary($id);
+    }
+
     public function DeleteAssignment($id)
     {
         $manager = $this->getFinanceManager();
