@@ -38,6 +38,8 @@ interface LMSFinanceManagerInterface
 
     public function GetCustomerAssignments($id, $show_expired = false, $show_approved = true);
 
+    public function GetCustomerServiceSummary($id);
+
     public function DeleteAssignment($id);
 
     public function AddAssignment($data);
